Improve performance of acyclic module implement method.